# InfiniSweeper

./: .clang-format  .gitignore  CMakeLists.txt  README.md  level_example.toml  levels.toml  license  pack_game_macos.sh  pack_game_windows.bat
res/: UI.blend  UI_animation_test.blend  bin2header_builtin_icon.sh  icon.blend  license_font_MINE_SWEEPER  license_hdr  logo.blend  number_31.blend  number_assemble.sh  overlay.blend  tile_assemble.sh  tiles.blend  ui_assemble.sh
screenshots/: compress.sh
src/: atlas.cpp  atlas.hpp  fixed_size_int.hpp  icon_tiny.png.h  logic.cpp  logic.hpp  main.cpp  main.hpp  rect_util.cpp  rect_util.hpp  rl.hpp  scene.cpp  scene.hpp  serializer.cpp  serializer.hpp  ssaa_window.cpp  ssaa_window.hpp  transform.cpp  transform.hpp  vec2i.cpp  vec2i.hpp
